fix: combo-box dropdown overflow-x

--- a/projects/components/src/combo-box/combo-box.component.scss
+++ b/projects/components/src/combo-box/combo-box.component.scss
@@ -108,6 +108,7 @@
 
   .option-list {
     overflow-y: auto;
+    overflow-x: hidden;
     height: 100%;
   }
 
